# xasic

./: .gitignore  Makefile  Makefile.am  README.md  compile_flags.txt  configure.ac  lex.yy.cc  mortar.toml  mortar.toml~  res.org  xasic.old
basic/: testfile.bas  vartest.bas
source/: codegen.py  globals.cpp  globals.hpp  main.cpp  main.cpp~
source/bison/: parse.y
source/data/: #data.hpp#  data.cpp  data.hpp  data.hpp.old  variable.cpp  variable.hpp
source/flex/: .gitignore  lex.l  test.txt
source/heap/: #heap.cpp#  #heap.hpp#  heap.cpp  heap.cpp~  heap.hpp
source/lexer/: lex.cpp  lex.hpp  token.hpp
src/: globals.hpp  main.cpp
src/data/: data.hpp  variable.cpp
src/flex/: .gitignore  note.org  xasic.l  xasic.lex
src/heap/: heap.cpp  heap.hpp
src/parser/: xasic.y
test/: bool.test  bool.xas  comment.test  func.test  func.xas  hello.test  test.py  test.sh
